[package]
name = "irx-config"
version = "2.3.2"
edition = "2021"
authors = ["Andriy Bakay <andriy@irbisx.com>"]
description = "The library provides convenient way to represent/parse configuration from different sources"
license = "BSD-2-Clause"
homepage = "https://github.com/abakay/irx-config/"
repository = "https://github.com/abakay/irx-config/"
keywords = ["configuration", "environment", "command-line", "secrets", "seal"]
categories = ["config"]
include = [
    "src/**/*.rs",
    "tests/**/*",
    "Cargo.toml",
    "COPYRIGHT",
    "README.md",
    "CHANGELOG.md",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
thiserror = "1.0"
serde = { version = "1.0" }
serde_json = "1.0"
blake2b_simd = "1.0"
derive_builder = { version = "0.10", optional = true }
serde_yaml = { version = "0.8", optional = true }
toml = { version = "0.5", optional = true }
clap = { version = "3.1", optional = true }
json5 = { version = "0.4", optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }

[features]
parsers = ["derive_builder"]
env = ["parsers", "serde_yaml"]
json = ["parsers"]
json5-parser = ["parsers", "json5"]
yaml = ["parsers", "serde_yaml"]
toml-parser = ["parsers", "toml"]
cmd = ["parsers", "clap", "serde_yaml"]

[[test]]
name = "parsers"
required-features = ["env", "json", "json5-parser", "yaml", "toml-parser", "cmd"]
