[package]
name = "irx-config"
version = "3.5.0"
edition = "2021"
rust-version = "1.74.0"
authors = ["Andriy Bakay <andriy@irbisx.com>"]
description = "The library provides convenient way to represent/parse configuration from different sources"
license = "BSD-2-Clause"
homepage = "https://github.com/abakay/irx-config/"
repository = "https://github.com/abakay/irx-config/"
keywords = ["configuration", "environment", "command-line", "secrets", "seal"]
categories = ["config"]
include = [
    "src/**/*.rs",
    "tests/**/*",
    "Cargo.toml",
    "COPYRIGHT",
    "README.md",
    "CHANGELOG.md",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
thiserror = "1.0"
serde = "1.0"
serde_json = "1.0"
cfg-if = "1.0"
blake2b_simd = { version = "1.0", optional = true }
blake3 = { version = "1.5", optional = true }
derive_builder = { version = "0.20", optional = true }
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.8", optional = true }
clap = { version = "4.5", optional = true }
json5 = { version = "0.4", optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
version-sync = "0.9"

[features]
default = ["blake2b"]
blake2b = ["dep:blake2b_simd"]
blake3 = ["dep:blake3"]
parsers = ["dep:derive_builder"]
env = ["parsers", "dep:serde_yaml"]
json = ["parsers"]
json5-parser = ["parsers", "dep:json5"]
yaml = ["parsers", "dep:serde_yaml"]
toml-parser = ["parsers", "dep:toml"]
cmd = ["parsers", "dep:clap", "dep:serde_yaml"]

[lib]
doctest = false

[[test]]
name = "parsers"
required-features = ["env", "json", "json5-parser", "yaml", "toml-parser", "cmd"]
